--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Anissa's Website
+        </title>
+    </head>
   <body>
-    Hello World! This is my website.
+    <nav class="navbar">
+        <h1 class="logo">
+            <a href="index.html">
+                personal website
+            </a>
+        </h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Meet Anissa!</h1>
+        <div class="about">
+            <div class="about-image">
+                <img src="sky.jpg" alt="A video of an image of the sky and clouds being too
+                big">
+            </div>
+            <div class="about-text">
+        <p>Hi! My name is <strong>Anissa Soungpanya</strong> and I am a 3rd year computer science student!</p>
+        <p>I am from the bay area and love cooking, painting and thrifting!</p>
+            </div>
+        </div>
+    </main>
+    <footer class= "footer"></footer>
+</div>
   </body>
 </html>
