feat: add content to styles.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Anissa's Website
         </title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
   <body>
     <nav class="navbar">
