--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
         <title>
             Portfolio
         </title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <nav class = "navbar">
@@ -31,7 +32,7 @@
             </div>
             <div class="project-details">
                 <p class="project-name">Anissa's Website</p>
-                <p class="project-description">A website containing all info on Anissa!</p>
+                <p class="project-description">A website containing all info on Anissa! Learn about</p>
             </div>
             <a href ="index.html">Learn More</a>
         </main>
