--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
             Resume
         </title>
     </head>
+    <link rel="stylesheet" href="styles.css" />
     <body>
         <nav class="navbar">
             <h1 class="logo">
